tests/snapshots/run_wpt_conformance__onnx_gemm_both_negative_options_alpha_and_2nd_float16_input_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm both negative options.alpha and 2nd float16 input tensor",
    "onnx",
    "PASS",
)
