tests/snapshots/run_wpt_conformance__onnx_gemm_both_negative_options_alpha_and_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm both negative options.alpha and options.beta",
    "onnx",
    "PASS",
)
