tests/snapshots/run_wpt_conformance__onnx_gemm_float16_input_tensors_with_both_negative_options_alpha_and_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm float16 input tensors with both negative options.alpha and options.beta",
    "onnx",
    "PASS",
)
